re PR target/50979 (architecture mismatch: "mul32" not enabled for "smul" or "umul")

PR target/50979
	* config/sparc/sparc.h (ASM_CPU_SPEC): Pass -Av8 if -mcpu=v8.

From-SVN: r180968